--- a/Lotus.csproj
+++ b/Lotus.csproj
@@ -4,7 +4,7 @@
     <Description>Project Lotus</Description>
     <Authors>Tealeaf, Discussions</Authors>
     <langVersion>latest</langVersion>
-    <AmongUs>E:\SteamLibrary\steamapps\common\Among Us</AmongUs>
+    <AmongUs>D:\Games\AmongUs\steam\Lotus</AmongUs>
     <RootNamespace>Lotus</RootNamespace>
     <Nullable>enable</Nullable>
     <GenerateAssemblyFileVersionAttribute>false</GenerateAssemblyFileVersionAttribute>
@@ -20,26 +20,24 @@
   
   <ItemGroup>
     <!--<Reference Include="E:\SteamLibrary\steamapps\common\Among Us - LOTUS\dump\Assembly-CSharp-2023.6.13.dll" />-->
-    <PackageReference Include="AmongUs.GameLibs.Steam" Version="2023.7.11" />
-    <PackageReference Include="BepInEx.Unity.IL2CPP" Version="6.0.0-be.671" PrivateAssets="all" />
-    <PackageReference Include="JetBrains.Annotations" Version="2023.2.0-eap2">
+    <PackageReference Include="AmongUs.GameLibs.Steam">
+		  <Version>2024.3.5</Version>
+		  <PrivateAssets>all</PrivateAssets>
+		</PackageReference>
+    <PackageReference Include="BepInEx.Unity.IL2CPP" Version="6.0.0-be.688" PrivateAssets="all" />
+    <PackageReference Include="JetBrains.Annotations" Version="2023.2.0-eap3">
       <Aliases>JBAnnotations</Aliases>
     </PackageReference>
     <PackageReference Include="Samboy063.Cpp2IL.Core" Version="2022.1.0-development.866" />
 
     <PackageReference Include="BepInEx.AutoPlugin" Version="1.1.0" PrivateAssets="all" />
     <PackageReference Include="BepInEx.IL2CPP.MSBuild" Version="2.0.1" PrivateAssets="all" />
-    
-    <PackageReference Condition="$(Debug) == 'false'" Include="VentFramework" Version="1.2.3.412" />
 
     <PackageReference Include="GitInfo" Version="3.0.4" />
 
+    <PackageReference Include="VentFramework" Version="1.2.4.2" />
+
     <PackageReference Include="YamlDotNet" Version="13.1.0" />
-    
-    <Reference Condition="$(Debug) == 'true'" Include="../VentFramework/bin/Debug/net6.0/VentFramework.dll">
-      <IncludeAssets>runtime; compile; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-      <PrivateAssets>all</PrivateAssets>
-    </Reference>
   </ItemGroup>
   
 
@@ -61,6 +59,6 @@
   <Target Name="Copy" AfterTargets="Build" Condition="'$(AmongUs)' != ''">
     <Copy SourceFiles="$(OutputPath)$(AssemblyName).dll" DestinationFolder="$(AmongUs)/BepInEx/plugins/" />
     <Copy SourceFiles="$(OutputPath)$(AssemblyName).dll" DestinationFolder="$(AmongUs) - Copy/BepInEx/plugins/" Condition="'$(Configuration)' == 'Debug'" />
-    <Copy SourceFiles="$(OutputPath)$(AssemblyName).dll" DestinationFolder="$(AmongUs)/Release/" Condition="'$(Configuration)' == 'Release'"/>
+    <Copy SourceFiles="$(OutputPath)$(AssemblyName).dll" DestinationFolder="$(AmongUs)/Release/" Condition="'$(Configuration)' == 'Release'" />
   </Target>
 </Project>
