--- a/Lotus.csproj
+++ b/Lotus.csproj
@@ -28,6 +28,7 @@
     <PackageReference Include="JetBrains.Annotations" Version="2023.2.0-eap3">
       <Aliases>JBAnnotations</Aliases>
     </PackageReference>
+    <!-- <PackageReference Include="log4net" Version="2.0.17" /> -->
     <PackageReference Include="Samboy063.Cpp2IL.Core" Version="2022.1.0-development.866" />
 
     <PackageReference Include="BepInEx.AutoPlugin" Version="1.1.0" PrivateAssets="all" />
