--- a/Lotus.csproj
+++ b/Lotus.csproj
@@ -17,6 +17,14 @@
   <PropertyGroup>
     <debug>true</debug>
   </PropertyGroup>
+
+  <PropertyGroup>
+		<GamePlatform Condition="'$(GamePlatform)' == ''">Steam</GamePlatform>
+		<GameVersion Condition="'$(GamePlatform)' == 'Steam'">2024.3.5</GameVersion>
+		<GameVersion Condition="'$(GamePlatform)' == 'Itch'">2024.3.5</GameVersion>
+
+        <CopyLocalLockFileAssemblies>true</CopyLocalLockFileAssemblies>
+	</PropertyGroup>
   
   <ItemGroup>
     <!--<Reference Include="E:\SteamLibrary\steamapps\common\Among Us - LOTUS\dump\Assembly-CSharp-2023.6.13.dll" />-->
@@ -25,6 +33,7 @@
 		  <PrivateAssets>all</PrivateAssets>
 		</PackageReference>
     <PackageReference Include="BepInEx.Unity.IL2CPP" Version="6.0.0-be.688" PrivateAssets="all" />
+
     <PackageReference Include="JetBrains.Annotations" Version="2023.2.0-eap3">
       <Aliases>JBAnnotations</Aliases>
     </PackageReference>
@@ -32,7 +41,7 @@
     <PackageReference Include="Samboy063.Cpp2IL.Core" Version="2022.1.0-development.866" />
 
     <PackageReference Include="BepInEx.AutoPlugin" Version="1.1.0" PrivateAssets="all" />
-    <PackageReference Include="BepInEx.IL2CPP.MSBuild" Version="2.0.1" PrivateAssets="all" />
+        <PackageReference Include="BepInEx.IL2CPP.MSBuild" Version="2.0.1" PrivateAssets="all" />
 
     <PackageReference Include="GitInfo" Version="3.0.4" />
 
@@ -56,10 +65,16 @@
     <Compile Remove="./SourceGenerators/**/*" />
   </ItemGroup>
   
-  
   <Target Name="Copy" AfterTargets="Build" Condition="'$(AmongUs)' != ''">
+    <CreateItem Include="$(TargetDir)\*.dll" Exclude="$(TargetPath)">
+		<Output TaskParameter="Include" ItemName="DEPSD" />
+    </CreateItem>
+    
+		<Copy SourceFiles="$(TargetPath)" DestinationFolder="$(AmongUs)/BepInEx/plugins/" UseSymboliclinksIfPossible="true"></Copy>
+    <Move SourceFiles="@(DEPSD)" DestinationFolder="$(TargetDir)\depends\" OverwriteReadOnlyFiles="true" />
+	</Target>
+  
+  <!-- <Target Name="Copy" AfterTargets="Build" Condition="'$(AmongUs)' != ''">
     <Copy SourceFiles="$(OutputPath)$(AssemblyName).dll" DestinationFolder="$(AmongUs)/BepInEx/plugins/" />
-    <Copy SourceFiles="$(OutputPath)$(AssemblyName).dll" DestinationFolder="$(AmongUs) - Copy/BepInEx/plugins/" Condition="'$(Configuration)' == 'Debug'" />
-    <Copy SourceFiles="$(OutputPath)$(AssemblyName).dll" DestinationFolder="$(AmongUs)/Release/" Condition="'$(Configuration)' == 'Release'" />
-  </Target>
+  </Target> -->
 </Project>
