--- a/Lotus.csproj
+++ b/Lotus.csproj
@@ -12,6 +12,7 @@
     <GenerateAssemblyVersionAttribute>false</GenerateAssemblyVersionAttribute>
     <Deterministic>false</Deterministic>
     <DefineConstants>JETBRAINS_ANNOTATIONS</DefineConstants>
+    <Optimize>True</Optimize>
   </PropertyGroup>
   
   <PropertyGroup>
@@ -25,31 +26,44 @@
 
         <CopyLocalLockFileAssemblies>true</CopyLocalLockFileAssemblies>
 	</PropertyGroup>
+
+  <ItemGroup>
+        <PackageReference Include="AmongUs.GameLibs.Steam" Version="2024.3.5" PrivateAssets="all" />
+		<PackageReference Include="BepInEx.IL2CPP.MSBuild" Version="2.1.0-rc.1">
+			<PrivateAssets>all</PrivateAssets>
+			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+		</PackageReference>
+		<PackageReference Include="BepInEx.Unity.IL2CPP" Version="6.0.0-be.674" Private="false" ExcludeAssets="runtime;native" />
+		<PackageReference Include="VentFrameworkContinued" Version="1.0.0" />
+	</ItemGroup>
   
   <ItemGroup>
-    <!--<Reference Include="E:\SteamLibrary\steamapps\common\Among Us - LOTUS\dump\Assembly-CSharp-2023.6.13.dll" />-->
-    <PackageReference Include="AmongUs.GameLibs.Steam">
-		  <Version>2024.3.5</Version>
-		  <PrivateAssets>all</PrivateAssets>
-		</PackageReference>
-    <PackageReference Include="BepInEx.Unity.IL2CPP" Version="6.0.0-be.688" PrivateAssets="all" />
+    <PackageReference Include="Costura.Fody" Version="5.8.0-alpha0098">
+            <IncludeAssets>runtime; compile; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+            <PrivateAssets>all</PrivateAssets>
+    </PackageReference>
 
     <PackageReference Include="JetBrains.Annotations" Version="2023.2.0-eap3">
       <Aliases>JBAnnotations</Aliases>
     </PackageReference>
-    <!-- <PackageReference Include="log4net" Version="2.0.17" /> -->
-    <PackageReference Include="Samboy063.Cpp2IL.Core" Version="2022.1.0-development.866" />
-
-    <PackageReference Include="BepInEx.AutoPlugin" Version="1.1.0" PrivateAssets="all" />
-        <PackageReference Include="BepInEx.IL2CPP.MSBuild" Version="2.0.1" PrivateAssets="all" />
-
-    <PackageReference Include="GitInfo" Version="3.0.4" />
-
-    <PackageReference Include="VentFramework" Version="1.2.4.2" />
+    <PackageReference Include="Samboy063.Cpp2IL.Core" Version="2022.1.0-development.972" />
+    <PackageReference Include="GitInfo" Version="3.3.3">
+            <PrivateAssets>all</PrivateAssets>
+            <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+        </PackageReference>
 
     <PackageReference Include="YamlDotNet" Version="13.1.0" />
+
   </ItemGroup>
   
+  <Target Name="Copy" AfterTargets="Build" Condition="'$(AmongUs)' != ''">
+    <CreateItem Include="$(TargetDir)\*.dll" Exclude="$(TargetPath)">
+		<Output TaskParameter="Include" ItemName="DEPSD" />
+    </CreateItem>
+    
+		<Copy SourceFiles="$(TargetPath)" DestinationFolder="$(AmongUs)/BepInEx/plugins/" UseSymboliclinksIfPossible="true"></Copy>
+    <Move SourceFiles="@(DEPSD)" DestinationFolder="$(TargetDir)\depends\" OverwriteReadOnlyFiles="true" />
+	</Target>
 
   <ItemGroup>
     <EmbeddedResource Include=".\assets\**\*" />
@@ -64,17 +78,4 @@
     <Content Remove="./SourceGenerators/**/*" />
     <Compile Remove="./SourceGenerators/**/*" />
   </ItemGroup>
-  
-  <Target Name="Copy" AfterTargets="Build" Condition="'$(AmongUs)' != ''">
-    <CreateItem Include="$(TargetDir)\*.dll" Exclude="$(TargetPath)">
-		<Output TaskParameter="Include" ItemName="DEPSD" />
-    </CreateItem>
-    
-		<Copy SourceFiles="$(TargetPath)" DestinationFolder="$(AmongUs)/BepInEx/plugins/" UseSymboliclinksIfPossible="true"></Copy>
-    <Move SourceFiles="@(DEPSD)" DestinationFolder="$(TargetDir)\depends\" OverwriteReadOnlyFiles="true" />
-	</Target>
-  
-  <!-- <Target Name="Copy" AfterTargets="Build" Condition="'$(AmongUs)' != ''">
-    <Copy SourceFiles="$(OutputPath)$(AssemblyName).dll" DestinationFolder="$(AmongUs)/BepInEx/plugins/" />
-  </Target> -->
 </Project>
