--- a/Lotus.csproj
+++ b/Lotus.csproj
@@ -28,13 +28,14 @@
 	</PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="AmongUs.GameLibs.Steam" Version="2024.8.13" PrivateAssets="all" />
+    <PackageReference Include="AmongUs.GameLibs.Steam" Version="2024.10.29" PrivateAssets="all" />
 		<PackageReference Include="BepInEx.IL2CPP.MSBuild" Version="2.1.0-rc.1">
 			<PrivateAssets>all</PrivateAssets>
 			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 		</PackageReference>
 		<PackageReference Include="BepInEx.Unity.IL2CPP" Version="6.0.0-be.697" Private="false" ExcludeAssets="runtime;native" />
 		<PackageReference Condition="$(Debug) == 'false'" Include="VentFrameworkContinued" Version="1.1.0" />
+		<PackageReference Include="WebSocket4Net" Version="0.15.2" />
     <Reference Condition="$(Debug) == 'true'" Include="../VentFramework-Continued/bin/Debug/net6.0/VentFrameworkContinued.dll">
       <IncludeAssets>runtime; compile; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
