--- a/assets/RoleImages/Crew/medium.yaml
+++ b/assets/RoleImages/Crew/medium.yaml
@@ -1,1 +1,1 @@
-{"Color":8,"Hat":"hat_mira_gem","Pet":"pet_napstamate","Skin":"skin_Molly","Visor":"visor_anime"}
+{"Color":8,"Hat":"hat_mira_gem","Pet":"pet_napstamate","Skin":"skin_Molly","Visor":"","ShowDead":true}
